--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ body{
     text-align: center;
     box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.15);
 }
+.quote-box h2{
+    font-size: 32px;
+    margin-bottom: 40px;
+}
+.quote-box h2::after{
+    content: '';
+    width: 75px;
+    height: 3px;
+    border-radius: 3px;
+}
